// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard in collpased state 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="collapsible-card"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "500",
                  "paddingLeft": 10,
                },
              ]
            }
          >
            [missing "en.AUDITS.OTHER_ON_HANDS" translation] (15)
          </Text>
        </View>
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-down"
          size={30}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard while loading 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="collapsible-card"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "500",
                  "paddingLeft": 10,
                },
              ]
            }
          >
            [missing "en.AUDITS.OTHER_ON_HANDS" translation]
          </Text>
        </View>
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-up"
          size={30}
        />
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "margin": 8,
            "padding": 5,
          }
        }
        testID="loader"
      >
        <ActivityIndicator
          size={30}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard with other OH Qty props 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="collapsible-card"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "500",
                  "paddingLeft": 10,
                },
              ]
            }
          >
            [missing "en.AUDITS.OTHER_ON_HANDS" translation] (15)
          </Text>
        </View>
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-up"
          size={30}
        />
      </View>
    </View>
    <View>
      <View
        style={
          {
            "backgroundColor": "#ffffffff",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
          }
        }
      >
        <View />
      </View>
    </View>
  </View>
</View>
`;
